--- a/src/css/fill.css
+++ b/src/css/fill.css
@@ -4,3 +4,8 @@
 	font-family: monospace;
 	font-size: 1.2em;
 }
+
+#surface td{
+	position: relative;
+	transition: left 3s, top 3s, transform 5s;
+}
