--- a/src/css/fill.css
+++ b/src/css/fill.css
@@ -5,6 +5,10 @@
 	font-size: 1.2em;
 }
 
+body{
+	height: 2000px;
+}
+
 #surface td{
 	position: relative;
 	transition: left 3s, top 3s, transform 5s;
