--- a/src/main/webapp/css/zigzag.css
+++ b/src/main/webapp/css/zigzag.css
@@ -8,8 +8,8 @@
 }
 
 body {
-	background-image: url('/img/BackgroundFront.png'), url('/img/BackgroundBack.png');
-	background-size: 100%;
-	background-repeat: no-repeat, repeat;
+/*	background-image: url('/img/BackgroundFront.png'), url('/img/BackgroundBack.png');*/
+/*	background-size: 100%;*/
+/*	background-repeat: no-repeat, repeat;*/
 	background-position: top, bottom;
 }
