react dept SPA 추가

--- a/src/dept/App.css
+++ b/src/dept/App.css
@@ -13,3 +13,18 @@ table th{
 table td{
 	padding: 20px;
 }
+
+form{
+	width: 300px;
+	margin: auto;
+	text-align: center;
+}
+fieldset{
+	padding: 10px;
+	margin: 20px;
+}
+input{
+	padding: 10px;
+	width: 200px;
+	text-align: center;
+}
