--- a/src/css/move.css
+++ b/src/css/move.css
@@ -1,4 +1,12 @@
-
+h1{
+	text-align: center;
+}
+button{
+	display: flex;
+	margin:auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
 .collapse{
 	border-collapse: collapse;
 	font-family: monospace;
