--- a/src/dept/App.css
+++ b/src/dept/App.css
@@ -1,4 +1,14 @@
-
+h1{
+	text-align: center;
+	margin: 30px 0px;
+}
+a{
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	color: blue;
+	margin: 10px 0px;
+}
 table{
 	text-align: center;
 	width: 500px;
@@ -7,11 +17,15 @@ table{
 }
 
 table th{
-	padding: 20px;
+	padding: 15px;
 }
 
 table td{
-	padding: 20px;
+	padding: 15px;
+}
+table tbody tr:hover{
+	background-color: lightgray;
+	font-weight: bolder;
 }
 
 form{
